stylised MessageController